# rust-full-websocket-example

./: Cargo.toml  LICENSE  README.md
scripts/: test-server.js
src/: args.rs  main.rs  util.rs
src/handler/: handler_echo.rs  mod.rs
src/msg/: mod.rs  msg_echo.rs  msg_in.rs  msg_out.rs
