[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "*", features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
futures-util = { version = "*", features = ["sink", "std"] }
url = "*"
futures-channel = "*"
clap = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = { version = "*", features = ["json"] }
time = { version = "*", features = ["formatting"] }
uuid = { version = "*", features = ["v4"] }
log = "*"
tungstenite = "*"
env_logger = "*"
